[project]
name = "bottywotty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asqlite",
    "async-tkinter-loop>=0.9.3",
    "customtkinter>=5.2.2",
    "dotenv>=0.9.9",
    "twitchio[starlette]>=3.0.0b4",
    "pillow>=11.2.1",
]

[tool.uv.sources]
asqlite = { git = "https://github.com/Rapptz/asqlite.git" }

[dependency-groups]
dev = [
    "pyinstaller>=6.13.0",
]
